--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <a class="navbar-brand" href="#">
                     <img class="img-fluid" src="./assets/img/perkindo.png" alt="Perkindo" />
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse flex-grow-1" id="navbarNavAltMarkup">
+                <div class="offcanvas offcanvas-end flex-lg-row" tabindex="-1" id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
                     <div class="d-flex flex-column justify-content-center align-items-center flex-grow-1 p-2" style="background: rgba(0, 8, 255, 0.5); height: 116px">
                         <img class="img-fluid" src="./assets/img/perkindo.org.png" alt="Perkindo" />
                         <span class="text-center text-uppercase fs-6 text-dark"><span class="font-weight-bold">cinta</span> (collaboartion, innovation, networking, trust, awarness)</span>
@@ -83,13 +83,19 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./assets/img/slide1 2.png" class="d-block w-100" alt="..." style="height: 568px;" />
+                                <a href="#">
+                                    <img src="./assets/img/slide1 2.png" class="d-block w-100" alt="..." style="height: 568px" />
+                                </a>
                             </div>
                             <div class="carousel-item">
-                                <img src="./assets/img/slide1 2.png" class="d-block w-100" alt="..." style="height: 568px;" />
+                                <a href="#">
+                                    <img src="./assets/img/slide1 2.png" class="d-block w-100" alt="..." style="height: 568px" />
+                                </a>
                             </div>
                             <div class="carousel-item">
-                                <img src="./assets/img/slide1 2.png" class="d-block w-100" alt="..." style="height: 568px;" />
+                                <a href="#">
+                                    <img src="./assets/img/slide1 2.png" class="d-block w-100" alt="..." style="height: 568px" />
+                                </a>
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#slider1" data-bs-slide="prev">
@@ -104,10 +110,6 @@
                 </div>
                 <div class="col-8 p-0">
                     <div class="row row-cols-2">
-                        <!-- <img class="img-fluid" src="./assets/img/slide1 2.png" />
-                        <img class="img-fluid" src="./assets/img/slide1 2.png" />
-                        <img class="img-fluid" src="./assets/img/slide1 2.png" />
-                        <img class="img-fluid" src="./assets/img/slide1 2.png" /> -->
                         <div id="slider2" class="carousel slide p-0" data-bs-ride="true">
                             <div class="carousel-indicators">
                                 <button type="button" data-bs-target="#slider2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -116,13 +118,19 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="./assets/img/slide2.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide2.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="./assets/img/slide2.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide2.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="./assets/img/slide2.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide2.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#slider2" data-bs-slide="prev">
@@ -142,13 +150,19 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="./assets/img/slide3.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide3.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="./assets/img/slide3.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide3.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="./assets/img/slide3.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide3.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#slider3" data-bs-slide="prev">
@@ -168,13 +182,19 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="./assets/img/slide4.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide4.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="./assets/img/slide4.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide4.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="./assets/img/slide4.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide4.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#slider4" data-bs-slide="prev">
@@ -194,13 +214,19 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="./assets/img/slide6.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide6.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="./assets/img/slide6.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide6.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="./assets/img/slide6.png" class="d-block w-100" alt="..." style="height: 283px;" />
+                                    <a href="#">
+                                        <img src="./assets/img/slide6.png" class="d-block w-100" alt="..." style="height: 283px" />
+                                    </a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#slider5" data-bs-slide="prev">
