--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <!-- BEGIN Header -->
         <div class="container-fluid">
-            <div class="row row-cols-3">
+            <div class="row row-cols-1 row-cols-lg-3">
                 <div class="col p-0">
                     <div id="slider1" class="carousel slide p-0" data-bs-ride="true">
                         <div class="carousel-indicators">
@@ -108,7 +108,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="col p-0">
+                <div class="col p-0 d-none d-lg-block">
                     <div id="slider2" class="carousel slide p-0" data-bs-ride="true">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#slider2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -174,7 +174,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="col p-0">
+                <div class="col p-0 d-none d-lg-block">
                     <div id="slider4" class="carousel slide p-0" data-bs-ride="true">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#slider4" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
