scaling font size in navbar parkindo.org text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <!-- BEGIN Navbar -->
-        <nav class="navbar navbar-expand-md navbar-light p-0">
+        <nav class="navbar navbar-expand-lg navbar-light p-0">
           <div class="container-fluid pe-0">
               <a class="navbar-brand __navbar-brand" href="#" target="_blank">
                 <img class="img-fluid" src="./assets/img/perkindo.png" alt="Perkindo" />
@@ -32,7 +32,7 @@
                 <div class="offcanvas-body">
                   <div class="d-flex flex-column align-items-center __nav-title">
                     <p class="__nav-text-title">PERKINDO.ORG</p>
-                    <p class="__nav-text-subtitle">cinta (collaboartion, innovation, networking, trust, awarness)</p>
+                    <p class="__nav-text-subtitle"><span class="fw-bold">cinta (</span> collaboartion, innovation, networking, trust, awarness<span class="fw-bold">)</span></p>
                   </div>
                   <ul class="navbar-nav __navbar-nav d-flex align-items-center">
                       <li class="nav-item active-link">
