--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <!-- BEGIN Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light p-0">
             <div class="container-fluid p-0">
-                <a class="navbar-brand __navbar-brand" href="#" target="_blank">
+                <a class="navbar-brand mx-3 __navbar-brand" href="#" target="_blank">
                     <img class="img-fluid" src="./assets/img/perkindo.png" alt="Perkindo" />
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                <button class="navbar-toggler mx-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -108,7 +108,7 @@
                                 <a class="nav-link fw-bold p-0 mx-1 text-center" href="#">REGISTER</a>
                             </li> -->
                         </ul>
-                        <ul class="navbar-nav mr-auto px-3 justify-content-around align-items-center" style="background: #66b653; height: 116px">
+                        <ul class="navbar-nav __navbar-nav mr-auto px-3 justify-content-around align-items-center" style="background: #66b653; height: 116px">
                             <li class="nav-item">
                                 <a class="nav-link fw-bold p-0 mx-1 text-center" href="#">Register</a>
                             </li>
@@ -127,7 +127,7 @@
                             </section>
                         </div>
 
-                        <div class="d-flex align-items-center __lang">
+                        <div class="d-flex align-items-center __lang p-2">
                             <img class="m-auto" src="./assets/img/1607473002 1.png" alt="english" />
                             <img class="m-auto" src="./assets/img/bendera-merah-putih 1.png" alt="indonesia" />
                         </div>
