--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
-                        <div class="d-flex flex-column align-items-center __nav-title">
+                        <div class="d-flex flex-column justify-content-center align-items-center __nav-title">
                             <p class="__nav-text-title">PERKINDO.ORG</p>
                             <p class="__nav-text-subtitle text-center"><span class="fw-bold">cinta (</span> collaboartion, innovation, networking, trust, awarness<span class="fw-bold">)</span></p>
                         </div>
@@ -108,14 +108,14 @@
                                 <a class="nav-link fw-bold p-0 mx-1 text-center" href="#">REGISTER</a>
                             </li> -->
                         </ul>
-                        <ul class="navbar-nav __navbar-nav mr-auto px-3 justify-content-around align-items-center" style="background: #66b653; height: 116px">
+                        <ul class="navbar-nav __navbar-nav mr-auto p-3 py-lg-0 justify-content-around align-items-center" style="background: #66b653;">
                             <li class="nav-item">
-                                <a class="nav-link fw-bold p-0 mx-1 text-center" href="#">Register</a>
+                                <a class="nav-link fw-bold p-0 mx-1 text-center" href="#">REGISTER</a>
                             </li>
                         </ul>
-                        <div class="d-flex flex-column justify-content-center align-items-center flex-grow-1 p-2 __nav-search" style="background: #90c5b5; height: 116px">
+                        <div class="d-flex flex-column justify-content-center align-items-center flex-grow-1 p-2 py-4 __nav-search" style="background: #90c5b5;">
                             <form class="d-flex flex-row align-items-center bg-white rounded">
-                                <input type="text" class="form-control border-0 text-center" placeholder="Pencarian" />
+                                <input type="text" class="form-control border-0 text-center" placeholder="PENCARIAN" />
                                 <button type="submit" class="btn btn-light btn-just-icon">
                                     <i class="bi bi-search"></i>
                                 </button>
@@ -127,7 +127,7 @@
                             </section>
                         </div>
 
-                        <div class="d-flex align-items-center __lang p-2">
+                        <div class="d-flex align-items-center __lang p-2 p-lg-0">
                             <img class="m-auto" src="./assets/img/1607473002 1.png" alt="english" />
                             <img class="m-auto" src="./assets/img/bendera-merah-putih 1.png" alt="indonesia" />
                         </div>
