--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                                 <a class="nav-link fw-bold p-0 mx-1 text-center" href="#">REGISTER</a>
                             </li>
                         </ul>
-                        <div class="d-flex flex-column justify-content-center align-items-center flex-grow-1 p-2 py-4 __nav-search" style="background: #90c5b5;">
+                        <div class="d-flex flex-column justify-content-center align-items-center flex-grow-1 p-3 py-4 __nav-search" style="background: #90c5b5;">
                             <form class="d-flex flex-row align-items-center bg-white rounded">
-                                <input type="text" class="form-control border-0 text-center" placeholder="PENCARIAN" />
+                                <input type="text" class="form-control border-0 fw-bold text-center text-truncate" placeholder="PENCARIAN" />
                                 <button type="submit" class="btn btn-light btn-just-icon">
                                     <i class="bi bi-search"></i>
                                 </button>
