--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                                 <a class="nav-link fw-bold p-0 mx-1 text-center" href="#">BERANDA</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link fw-bold p-0 mx-1 text-center dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false"> ORGANISASI </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                                <a class="nav-link fw-bold p-0 mx-1 text-center dropdown-toggle"> ORGANISASI </a>
+                                <ul class="dropdown-menu">
                                     <li class="dropdown"><a class="dropdown-item" href="https://perkindo.org/pengurusall">Dewan Pengurus Pusat</a></li>
                                     <li class="dropdown"><a class="dropdown-item" href="https://perkindo.org/coming">Dewan Pengawas</a></li>
                                     <li class="dropdown"><a class="dropdown-item" href="https://perkindo.org/coming">Dewan Kehormatan</a></li>
@@ -888,7 +888,7 @@
         <!-- END Popover Content -->
 
         <!--   Core JS Files   -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+        <script src="./assets/js/jquery.min.js"></script>
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
         <script src="./assets/js/jquery-match-height.js"></script>
 
