fix hover popover menu

--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
                                 <a class="nav-link fw-bold p-0 mx-1 text-center" href="#">REGISTER</a>
                             </li> -->
                         </ul>
-                        <ul class="navbar-nav __navbar-nav mr-auto p-3 py-lg-0 justify-content-around align-items-center" style="background: #66b653;">
+                        <ul class="navbar-nav __navbar-nav mr-auto p-3 py-lg-0 justify-content-around align-items-center" style="background: #66b653">
                             <li class="nav-item">
                                 <a class="nav-link fw-bold p-0 mx-1 text-center" href="#">REGISTER</a>
                             </li>
                         </ul>
-                        <div class="d-flex flex-column justify-content-center align-items-center flex-grow-1 p-3 py-4 __nav-search" style="background: #90c5b5;">
+                        <div class="d-flex flex-column justify-content-center align-items-center flex-grow-1 p-3 py-4 __nav-search" style="background: #90c5b5">
                             <form class="d-flex flex-row align-items-center bg-white rounded">
                                 <input type="text" class="form-control border-0 fw-bold text-center text-truncate" placeholder="PENCARIAN" />
                                 <button type="submit" class="btn btn-light btn-just-icon">
@@ -354,9 +354,9 @@
                 <div class="col p-0">
                     <div class="container-overlay">
                         <img src="./assets/img/2e72f5dbca313a95a614ac5562e7e1c7.jpeg" class="card-img" alt="..." />
-                        <div class="content-overlay" style="background: rgba(0, 8, 255, 0.5)">
+                        <div class="content-overlay bg-odd">
                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                <h1 class="text-uppercase" data-bs-toggle="popover" data-bs-placement="top" data-bs-title="Tentang Perkindo" data-bs-content-id="popover-tentang-perkindo">tentang perkindo</h1>
+                                <h1 data-bs-toggle="popover" data-bs-title="Tentang Perkindo" data-bs-content-id="popover-tentang-perkindo-content" class="text-uppercase">tentang perkindo</h1>
                             </div>
                         </div>
                     </div>
@@ -364,9 +364,9 @@
                 <div class="col p-0">
                     <div class="container-overlay">
                         <img src="./assets/img/b5a3817cd455efdf10315bb7563ad5b4.png" class="card-img" alt="..." />
-                        <div class="content-overlay" style="background: rgba(255, 111, 0, 0.5)">
+                        <div class="content-overlay bg-even">
                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                <h1 class="text-uppercase" data-bs-toggle="popover" data-bs-placement="top" data-bs-title="Keanggotaan" data-bs-content-id="popover-keanggotaan">keanggotaan</h1>
+                                <h1 class="text-uppercase" data-bs-toggle="popover" data-bs-title="Keanggotaan" data-bs-content-id="popover-keanggotaan-content">keanggotaan</h1>
                             </div>
                         </div>
                     </div>
@@ -374,9 +374,9 @@
                 <div class="col p-0">
                     <div class="container-overlay">
                         <img src="./assets/img/31f59146442a1f52aee41f4e78bfa7a4.png" class="card-img" alt="..." />
-                        <div class="content-overlay" style="background: rgba(0, 8, 255, 0.5)">
+                        <div class="content-overlay bg-odd">
                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                <h1 class="text-uppercase" data-bs-toggle="popover" data-bs-placement="top" data-bs-title="Sertifikasi" data-bs-content-id="popover-sertifikasi">sertifikasi</h1>
+                                <h1 class="text-uppercase" data-bs-toggle="popover" data-bs-title="Sertifikasi" data-bs-content-id="popover-sertifikasi-content">sertifikasi</h1>
                             </div>
                         </div>
                     </div>
@@ -384,9 +384,9 @@
                 <div class="col p-0">
                     <div class="container-overlay">
                         <img src="./assets/img/907f8cd2fa67826b29fef8d288a94a1a.jpeg" class="card-img" alt="..." />
-                        <div class="content-overlay" style="background: rgba(255, 111, 0, 0.5)">
+                        <div class="content-overlay bg-even">
                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                <h1 class="text-uppercase" data-bs-toggle="popover" data-bs-placement="top" data-bs-title="Bisnis" data-bs-content-id="popover-bisnis">bisnis</h1>
+                                <h1 class="text-uppercase" data-bs-toggle="popover" data-bs-title="Bisnis" data-bs-content-id="popover-bisnis-content">bisnis</h1>
                             </div>
                         </div>
                     </div>
@@ -679,7 +679,7 @@
                         <div class="col-6 col-lg-3 p-0">
                             <div class="container-overlay">
                                 <img src="./assets/img/kementrian.png" class="card-img" alt="..." />
-                                <div class="content-overlay" style="background: rgba(255, 111, 0, 0.5)">
+                                <div class="content-overlay bg-even">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
                                         <span class="text-uppercase fs-5 fw-bold text-light display-6">kementrian</span>
                                     </div>
@@ -689,7 +689,7 @@
                         <div class="col-6 col-lg-3 p-0">
                             <div class="container-overlay">
                                 <img src="./assets/img/badan lembaga.png" class="card-img" alt="..." />
-                                <div class="content-overlay" style="background: rgba(0, 8, 255, 0.5)">
+                                <div class="content-overlay bg-odd">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
                                         <span class="text-uppercase fs-5 fw-bold text-light display-6">badan lembaga</span>
                                     </div>
@@ -699,7 +699,7 @@
                         <div class="col-6 col-lg-3 p-0">
                             <div class="container-overlay">
                                 <img src="./assets/img/bumn.png" class="card-img" alt="..." />
-                                <div class="content-overlay" style="background: rgba(255, 111, 0, 0.5)">
+                                <div class="content-overlay bg-even">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
                                         <span class="text-uppercase fs-5 fw-bold text-light display-6">bumn</span>
                                     </div>
@@ -709,7 +709,7 @@
                         <div class="col-6 col-lg-3 p-0">
                             <div class="container-overlay">
                                 <img src="./assets/img/lembaga internasional.png" class="card-img" alt="..." />
-                                <div class="content-overlay" style="background: rgba(0, 8, 255, 0.5)">
+                                <div class="content-overlay bg-odd">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
                                         <span class="text-uppercase fs-5 fw-bold text-light display-6">lembaga internasional / donor fund</span>
                                     </div>
@@ -724,7 +724,7 @@
                         <div class="col-6 col-lg-3 p-0">
                             <div class="container-overlay">
                                 <img src="./assets/img/asosiasi.png" class="card-img" alt="..." />
-                                <div class="content-overlay" style="background: rgba(255, 111, 0, 0.5)">
+                                <div class="content-overlay bg-even">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
                                         <span class="text-uppercase fs-5 fw-bold text-light display-6">asosiasi bu / profesi</span>
                                     </div>
@@ -734,7 +734,7 @@
                         <div class="col-6 col-lg-3 p-0">
                             <div class="container-overlay">
                                 <img src="./assets/img/pergruan.png" class="card-img" alt="..." />
-                                <div class="content-overlay" style="background: rgba(0, 8, 255, 0.5)">
+                                <div class="content-overlay bg-odd">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
                                         <span class="text-uppercase fs-5 fw-bold text-light display-6">perguruan tinggi</span>
                                     </div>
@@ -744,7 +744,7 @@
                         <div class="col-6 col-lg-3 p-0">
                             <div class="container-overlay">
                                 <img src="./assets/img/peraturan.png" class="card-img" alt="..." />
-                                <div class="content-overlay" style="background: rgba(255, 111, 0, 0.5)">
+                                <div class="content-overlay bg-even">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
                                         <span class="text-uppercase fs-5 fw-bold text-light display-6">peraturan</span>
                                     </div>
@@ -754,7 +754,7 @@
                         <div class="col-6 col-lg-3 p-0">
                             <div class="container-overlay">
                                 <img src="./assets/img/refrensi.png" class="card-img" alt="..." />
-                                <div class="content-overlay" style="background: rgba(0, 8, 255, 0.5)">
+                                <div class="content-overlay bg-odd">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
                                         <span class="text-uppercase fs-5 fw-bold text-light display-6">refrensi</span>
                                     </div>
@@ -831,7 +831,7 @@
         <!-- END Footer -->
 
         <!-- BEGIN Popover Content -->
-        <div id="popover-tentang-perkindo" class="d-none">
+        <div id="popover-tentang-perkindo-content" class="d-none">
             <div class="list-group list-group-flush">
                 <a class="list-group-item" href="">Sejarah Perkindo</a>
                 <a class="list-group-item" href=""> Kode Etik Perkindo</a>
@@ -845,7 +845,7 @@
             </div>
         </div>
 
-        <div id="popover-keanggotaan" class="d-none">
+        <div id="popover-keanggotaan-content" class="d-none">
             <div class="list-group list-group-flush">
                 <a class="list-group-item" href="">Syarat-syarat Anggota</a>
                 <a class="list-group-item" href="">Peta Sebaran Anggota</a>
@@ -856,14 +856,14 @@
             </div>
         </div>
 
-        <div id="popover-sertifikasi" class="d-none">
+        <div id="popover-sertifikasi-content" class="d-none">
             <div class="list-group list-group-flush">
                 <a class="list-group-item" href="">Sertifikasi Badan Usaha Jasa Konstruksi</a>
                 <a class="list-group-item" href="">Sertifikasi Badan Usaha Non Jasa Konstruksi</a>
                 <a class="list-group-item" href="">Sertifikasi Usaha Jasa Konsultan Perorangan</a>
             </div>
         </div>
-        <div id="popover-bisnis" class="d-none">
+        <div id="popover-bisnis-content" class="d-none">
             <h6>Konsultan Konstruksi</h6>
             <div class="list-group list-group-flush">
                 <a class="list-group-item" href=""> a. Infrastruktur</a>
@@ -892,29 +892,7 @@
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
         <script src="./assets/js/jquery-match-height.js"></script>
 
-        <script>
-            // up to date year
-            const currentYear = new Date().getFullYear();
-            const yearContainer = document.getElementById("current-year");
-            yearContainer.innerHTML = currentYear;
-
-            // popover setup
-            const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
-            const popoverList = [...popoverTriggerList].map((popoverTriggerEl) => {
-                let opts = {
-                    animation: true,
-                    trigger: "click",
-                };
-
-                if (popoverTriggerEl.hasAttribute("data-bs-content-id")) {
-                    opts.content = document.getElementById(popoverTriggerEl.getAttribute("data-bs-content-id")).innerHTML;
-                    opts.html = true;
-                    opts.customClass = "llll";
-                }
-
-                return new bootstrap.Popover(popoverTriggerEl, opts);
-            });
-
+        <script type="text/javascript">
             $(document).ready(function () {
                 $(".slider-250").matchHeight();
                 $(".slider-500").matchHeight();
@@ -922,6 +900,42 @@
                 $(".dropdown").hover(function () {
                     $(this).find(".dropdown-menu").toggleClass("show");
                 });
+
+                // up to date year
+                const currentYear = new Date().getFullYear();
+                const yearContainer = document.getElementById("current-year");
+                yearContainer.innerHTML = currentYear;
+
+                // popover setup
+                const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
+                for (let popoverTriggerEl of Array.from(popoverTriggerList)) {
+                    let contentID = popoverTriggerEl.getAttribute("data-bs-content-id");
+                    new bootstrap.Popover(popoverTriggerEl, {
+                        title: popoverTriggerEl.getAttribute("data-bs-title"),
+                        placement: "top",
+                        html: true,
+                        trigger: "manual",
+                        content: $(`#${contentID}`).html(),
+                    });
+
+                    let selector = $(`[data-bs-content-id="${contentID}"]`);
+
+                    $(selector).hover(function () {
+                        if (!$(".popover-body").length) {
+                            $(selector).popover("show");
+                        }
+
+                        $(".popover").mouseleave(function () {
+                            $(selector).popover("hide");
+                        });
+                    });
+
+                    $(".content-overlay").mouseleave(function (e) {
+                        if (!e.relatedTarget.className.includes("popover")) {
+                            $(selector).popover("hide");
+                        }
+                    });
+                }
             });
         </script>
     </body>
