adjustment in footer

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
         <!-- END Big Banner -->
 
         <!-- BEGIN Peulang Tender & Mitra Kerja -->
-        <div class="container-fluid mb-3">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-6 d-flex flex-column p-0 mt-3 mt-lg-0">
                     <span class="text-uppercase fw-bold me-auto horizontal-line-2 m-2 ptmk-title">peluang tender</span>
@@ -772,7 +772,7 @@
         <!-- END Peulang Tender & Mitra Kerja -->
 
         <!-- BEGIN Footer -->
-        <div class="container-fluid">
+        <div class="container-fluid mt-5" style="background: #DADBFC;">
             <div class="row">
                 <div class="col-lg-6 mt-4">
                     <div class="d-flex justify-content-around align-items-center h-100">
@@ -826,7 +826,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5">
+            <div class="row mt-4">
                 <div class="col p-0">
                     <div class="w-100 fw-lighter text-light text-center p-1 footer-copyright" style="background: #242424">Copyrights © <span id="current-year"></span>. PERKINDO. All Rights Reserved.</div>
                 </div>
