add shadow in button toggler

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="navbar-brand mx-3 __navbar-brand" href="#" target="_blank">
                     <img class="img-fluid" src="./assets/img/perkindo.png" alt="Perkindo" />
                 </a>
-                <button class="navbar-toggler mx-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                <button class="navbar-toggler mx-3 shadow" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
