adjustment in footer

--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
         <!-- END Peulang Tender & Mitra Kerja -->
 
         <!-- BEGIN Footer -->
-        <div class="container-fluid mt-5" style="background: #dadbfc">
+        <div class="container-fluid mt-lg-5" style="background: #dadbfc">
             <div class="row">
                 <div class="col-lg-6 mt-4">
                     <div class="d-flex justify-content-around align-items-center h-100">
