make popover header template hidden

--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
         <!-- END Footer -->
 
         <!-- BEGIN Popover Header -->
-        <div id="popover-header" class="">
+        <div id="popover-header" class="d-none">
             <div class="d-flex">
                 <div id="popover-title" class="flex-grow-1 w-100"></div>
                 <span class="d-lg-none">
